# GValOperations

./: .gitignore  CMakeLists.txt  LICENSE  README
src/: CMakeLists.txt  GValOperations.cpp  GValOperations.h  GValOperationsTest.cpp  makefile
