PROJECT(GValOperations)
cmake_minimum_required(VERSION 2.8)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_SOURCE_DIR}/bin)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_SOURCE_DIR}/bin)

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lib)
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY})
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY})

set(SOURCES GValOperations.cpp)

set(HEADER_FILES GValOperations.h)

ADD_SUBDIRECTORY(src)

INCLUDE_DIRECTORIES(.)

ADD_LIBRARY(GValOperations STATIC ${SOURCES} ${HEADER_FILES})
ADD_EXECUTABLE(GValOperationsTest GValOperationsTest.cpp ${HEADER_FILES})
TARGET_LINK_LIBRARIES(GValOperationsTest GValOperations ${CONAN_LIBS})
